--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,11 @@
             <version>1.18.4</version>
             <scope>provided</scope>
         </dependency>
+        <!--cache-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-cache</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
